# docs/swagger.yaml
@@ -8,12 +8,12 @@ definitions:
     type: object
   models.CategoryCreateRequest:
     properties:
+      book_id:
+        type: integer
       icon:
         type: string
       name:
         type: string
-      type_id:
-        type: integer
       user_id:
         type: integer
     required:
